Files committed from Adapter on Tue Feb 14 2023

--- a/theme/assets/css/foodsfromegypt-february-2023.webflow.css
+++ b/theme/assets/css/foodsfromegypt-february-2023.webflow.css
@@ -1510,6 +1510,11 @@ h3 {
   text-decoration: none;
 }
 
+.company-link-block {
+  width: 100%;
+  text-decoration: none;
+}
+
 @media screen and (max-width: 991px) {
   .navbar-logo-left {
     position: fixed;
