Files committed from Adapter on Fri Feb 17 2023

--- a/theme/partials/navbar.liquid
+++ b/theme/partials/navbar.liquid
@@ -23,7 +23,7 @@
             </div>
             <ul role="list" class="nav-menu-two mobile-hide w-list-unstyled">
               <li class="mobile-margin-top-10">
-                <a href="{{ links.6c80469d }}" class="nav-button w-button">{{ texts.-64104400 }}</a>
+                <a href="{{ links.-5e686ca2 }}" class="nav-button w-button">{{ texts.-64104400 }}</a>
               </li>
             </ul>
           </nav>
