--- a/theme/assets/css/foodsfromegypt-february-2023.webflow.css
+++ b/theme/assets/css/foodsfromegypt-february-2023.webflow.css
@@ -159,7 +159,7 @@ h3 {
 }
 
 .nav-link.w--current {
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 .mobile-margin-top-10.mobile {
@@ -675,7 +675,7 @@ h3 {
 }
 
 .footer-nav-link.w--current {
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 .footer-legal-text {
@@ -1210,10 +1210,6 @@ h3 {
   background-color: #f2da54;
 }
 
-.form-section.yellow.hidden {
-  display: none;
-}
-
 .form-section.blue {
   background-color: #14234b;
 }
@@ -1433,23 +1429,6 @@ h3 {
   max-width: 90px;
 }
 
-.exhibitor-item {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  grid-row-gap: 5px;
-}
-
 .empty-state {
   display: none;
 }
@@ -1534,13 +1513,6 @@ h3 {
 .company-link-block {
   width: 100%;
   text-decoration: none;
-}
-
-.category-card-exhibitor-name {
-  color: #707070;
-  font-size: 12px;
-  line-height: 16px;
-  text-align: center;
 }
 
 @media screen and (max-width: 991px) {
