--- a/theme/partials/footer.liquid
+++ b/theme/partials/footer.liquid
@@ -10,10 +10,9 @@
           </div>
           <div id="w-node-_371987f7-477d-b662-4d60-46bc8f22e9da-8f22e9cd" class="footer5-right-column">
             <div class="footer-links-wrapper">
-              <a href="{{ links.63d9516b }}" class="footer-link w-inline-block"><img src="{{ images.-40040899.url }}" loading="lazy" alt="{{ images.-40040899.alt | trim | escape }}" class="footer-image"></a>
-              <a href="{{ links.19976ba3 }}" class="footer-link w-inline-block"><img src="{{ images.-65191692.url }}" loading="lazy" alt="{{ images.-65191692.alt | trim | escape }}" class="footer-image"></a>
-              <a href="{{ links.-5cd3f38d }}" class="footer-link w-inline-block"><img src="{{ images.4bc5256e.url }}" loading="lazy" alt="{{ images.4bc5256e.alt | trim | escape }}" class="footer-image"></a>
-              <a href="{{ links.499802e4 }}" class="footer-link w-inline-block"><img src="{{ images.-1d96be21.url }}" loading="lazy" alt="{{ images.-1d96be21.alt | trim | escape }}" class="footer-image"></a>
+              <a href="{{ links.19a2b790 }}" target="_blank" class="footer-link w-inline-block"><img src="{{ images.-40040899.url }}" loading="lazy" alt="{{ images.-40040899.alt | trim | escape }}" class="footer-image"></a>
+              <a href="{{ links.3ba591c0 }}" target="_blank" class="footer-link w-inline-block"><img src="{{ images.-65191692.url }}" loading="lazy" alt="{{ images.-65191692.alt | trim | escape }}" class="footer-image"></a>
+              <a href="{{ links.2ee3cc4 }}" target="_blank" class="footer-link w-inline-block"><img src="{{ images.-1d96be21.url }}" loading="lazy" alt="{{ images.-1d96be21.alt | trim | escape }}" class="footer-image"></a>
             </div>
           </div>
           <div id="w-node-_371987f7-477d-b662-4d60-46bc8f22e9e4-8f22e9cd" class="footer-filler-div"></div>
